# api/models/income_product.go
@@ -18,3 +18,16 @@ type CreateIncomeProduct struct {
 type CreateIncomeProducts struct {
 	IncomeProducts []CreateIncomeProduct `json:"income_products"`
 }
+
+type IncomeProductsResponse struct {
+	IncomeProducts []IncomeProduct `json:"income_products"`
+	Count          int             `json:"count"`
+}
+
+type IncomeProducts struct {
+	IncomeProducts []IncomeProduct `json:"income_products"`
+}
+
+type DeleteIncomeProducts struct {
+	IDs []PrimaryKey `json:"ids"`
+}
